# py-cleaner

./: README.md  pyproject.toml
.github/workflows/: ci.yml
src/: __init__.py
src/py_cleaner/: __init__.py  content.py  env_vars.py  executor.py  main.py
src/py_cleaner/infra/: __init__.py  env_vars.py  log.py
src/py_cleaner/res/: __init__.py  default.json
tests/: __init__.py
tests/py_cleaner/: __init__.py  env_vars.py  test_content.py
tests/py_cleaner/res/: __init__.py  default.json
