[project]
name = "py-cleaner"
version = "0.1.0"
description = ""
authors = [
    {name = "Leonel Liesenberg",email = "liesenberg.leonel@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[project.scripts]
py-cleaner = "py_cleaner.main:main"

[tool.poetry]
packages = [{include = "py_cleaner", from = "src"}]

[tool.poetry.group.dev.dependencies]
pylint = "^3.3.7"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"